# HERO-GNN

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: amazon_video_hero.yaml  fraud_amazon_official_hero.yaml  fraud_yelp_official_hero.yaml  real_dataset_template.yaml  synthetic_graphsage.yaml  synthetic_hero.yaml  synthetic_hero_wo_chain.yaml  synthetic_hero_wo_hetero.yaml  synthetic_hero_wo_mechanism.yaml  synthetic_mlp.yaml  synthetic_rulehetero.yaml  synthetic_semsim.yaml  yelp_academic_hero.yaml
data/: README.md
paper/: main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
paper/tables/: table_ablation_proxy.tex  (+6 more)
scripts/: build_high_coverage_llm_subset.py  build_llm_labels.py  build_risk_cards.py  export_explanations.py  export_paper_tables.py  export_real_llm_study_table.py  generate_synthetic.py  preprocess_amazon_video.py  preprocess_dgl_fraud.py  preprocess_yelp_academic.py  run_aaai_main_suite.py  run_high_coverage_llm_subset.py  run_labeler_comparison.py  run_minimal_suite.py  run_official_fraud_suite.py  run_real_suite.py  run_scalability_suite.py  run_significance_test.py  run_single.py  summarize_results.py
src/: __init__.py
src/utils/: io.py  (+4 more)
tests/: test_aaai_experiment_exports.py  test_amazon_preprocess.py  test_dgl_fraud_preprocess.py  test_evidence_chain.py  test_llm_labelers.py  test_neighbor_retrieval.py  test_official_mode.py  test_smoke_train.py  test_summarize_results.py  test_synthetic_data.py  test_yelp_preprocess.py
(+39 files in other folders)
